# zenmoney-finstats

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  Taskfile.yaml  docker-compose.fly.yml  docker-compose.local.yml  entrypoint.sh  entrypoint_server.sh  entrypoint_sync_daemon.sh  fly.review.toml  fly.toml  pyproject.toml  requests.http
.docker/: docker-compose.db.yaml
.etc/: chat_gpt_instructions.txt  requests.http
.github/workflows/: ci.yaml  fly-prod.yaml  fly-review.yaml
alembic/: env.py
alembic/versions/: 0dbc34e96839_init.py  1366eeceff39_init.py  1ca405d64f0a_init.py  5e31f7bdeaba_init.py  ca4c1e882eb9_init.py  df1746b31691_init.py  e08521d91ead_init.py
src/client/: __init__.py  account.py  client.py  company.py  country.py  health.py  instrument.py  merchant.py  models.py  tag.py  transaction.py  user.py
src/finstats/: app.py  args.py  cli.py  cli_syncer.py  client.py  contracts.py  file.py  syncer.py
src/finstats/application/: __init__.py  application.py  health.py  metrics.py  telemetry.py
src/finstats/client/: client.py  convert.py  models.py
src/finstats/container/: __init__.py  container.py
src/finstats/daemons/: __init__.py  base.py  registry.py  sync_diff.py
src/finstats/domain/: __init__.py  contracts.py
src/finstats/http/: __init__.py  accounts.py  app.py  base.py  context.py  convert.py  health.py  instruments.py  merchants.py  middleware.py  models.py  openapi.py  tags.py  transaction_expense.py  transaction_income.py  transactions.py
src/finstats/server/: __init__.py  accounts.py  app.py  base.py  convert.py  health.py  instruments.py  merchants.py  middleware.py  models.py  openapi.py  tags.py  transaction_expense.py  transaction_income.py  transactions.py
src/finstats/store/: __init__.py  accounts.py  base.py  companies.py  config.py  connection.py  countries.py  instruments.py  merchants.py  misc.py  psql_store.py  sqlalchemy_prometheus.py  tags.py  timestamp.py  transactions.py  users.py
src/finstats/syncer/: __init__.py  file.py  syncer.py
src/finstats/zenmoney/: __init__.py  client.py  convert.py  models.py
src/testing/: testapp.py  testdata.py  zenmoney.py
tests/: conftest.py  test.py  test_smoke.py
tests/server/: conftest.py  test_accounts.py  test_instruments.py  test_merchants.py  test_middlewares.py  test_tags.py  test_transactions.py
tests/store/: test_accounts.py  test_companies.py  test_countries.py  test_instruments.py  test_merchants.py  test_tags.py  test_timestamp.py  test_transactions.py  test_users.py
tests/syncer/: test_file.py
