[project]
name = "finstats"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aio-background>=0.0.11",
    "aio-request>=0.2.6",
    "aiohttp>=3.13.3",
    "aiohttp-apigami[dataclass]>=0.5.7",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "marshmallow-recipe>=0.0.68",
    "opentelemetry-exporter-prometheus>=0.54b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.54b0",
    "opentelemetry-sdk>=1.33.0",
    "packaging>=23",
    "prometheus-client>=0.22.0",
    "psycopg[binary]>=3.3.2",
    "punq>=0.7.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-pg>=0.0.25",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[tool.uv]
package = true

[project.scripts]
finstats = "finstats.cli:main"

[tool.pytest.ini_options]
markers = [
    "no_migrations: test does not require database migrations",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]

[tool.ruff.format]

[tool.ty]
# сам факт наличия [tool.ty] важен, иначе ty игнорит pyproject.toml  [oai_citation:2‡Astral Docs](https://docs.astral.sh/ty/configuration/)

[tool.ty.environment]
python-version = "3.14"
root = ["./src"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
possibly-unresolved-reference = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
